feet: add Makefile and update graceful shutdown
